maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:4: error: illegal start of statement
    	match (random(3)) {
        ^