maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    while (!estSurBiscuit) {
    	match (random(3)) {
    		case 0 => avance
    		case 1 => droite
    		case 2 => gauche
    	}
    }
}
